--- a/src/.vuepress/styles/palette.styl
+++ b/src/.vuepress/styles/palette.styl
@@ -1,10 +1,17 @@
-/**
- * Custom palette here.
- *
- * ref：https://v1.vuepress.vuejs.org/zh/config/#palette-styl
- */
-
-$accentColor = #3eaf7c
-$textColor = #2c3e50
-$borderColor = #eaecef
+$accentColor = #b20000
+$textColor = #1a1a1a
+$borderColor = #dcdcdc
 $codeBgColor = #282c34
+$arrowBgColor = #ccc
+$badgeTipColor = #42b983
+$badgeWarningColor = darken(#ffe564, 35%)
+$badgeErrorColor = #DA5961
+
+$navbarHeight = 3.75rem
+$sidebarWidth = 18rem
+$contentWidth = 1280px
+$homePageWidth = 1280px
+
+$MQNarrow = 959px
+$MQMobile = 719px
+$MQMobileNarrow = 419px
