feat: global layout adjustments

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -1,2 +1,27 @@
-.home .hero img
-  max-width 260px!important
+body
+  font-family: "Open Sans", "Segoe UI", Tahoma, Sans-serif
+  font-size: 1rem
+  font-style: normal
+  font-variant: normal
+  font-weight: 400
+  line-height: 1rem
+
+.navbar
+  background: #f8f8f8
+
+  .logo
+    height: 2.625rem !important
+    margin: -.25rem 0
+
+  .site-name
+    display: none
+
+  .links
+    background: none !important
+
+.home
+  .features
+    text-align: center
+
+  .hero img
+    max-width: 260px !important
