feat: customize tip block colors

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -25,3 +25,9 @@ body
 
   .hero img
     max-width: 260px !important
+
+.page
+  .custom-block
+    &.tip
+      background: #f8f8f8
+      border-color: #dcdcdc
