feat: adjust styles to the style guide itself

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -7,7 +7,9 @@ body
   line-height: 1rem
 
 .navbar
-  background: #f8f8f8
+  backdrop-filter: blur(8px)
+  background-color: rgba(211, 211, 211, 0.44) !important
+  background-image: url("~@source/assets/images/acrylic-noise.png") !important
 
   .logo
     height: 2.625rem !important
@@ -18,6 +20,11 @@ body
 
   .links
     background: none !important
+
+.sidebar
+  backdrop-filter: blur(24px)
+  background-blend-mode: exclusion
+  background-color: rgba(243, 243, 243, 0.5) !important
 
 .home
   .features
@@ -31,3 +38,11 @@ body
     &.tip
       background: #f8f8f8
       border-color: #dcdcdc
+
+.medium-zoom--opened
+  .medium-zoom-overlay
+    backdrop-filter: blur(4px)
+    background-color: rgba(0, 0, 0, 0.3) !important
+
+.medium-zoom-image.medium-zoom-image--opened
+  filter: drop-shadow(0 2px 21px rgba(0, 0, 0, 0.1474)) drop-shadow(0 32px 64px rgba(0, 0, 0, 0.1876))
