--- a/src/.vuepress/styles/palette.styl
+++ b/src/.vuepress/styles/palette.styl
@@ -1,11 +1,11 @@
 $accentColor = #b20000
 $textColor = #1a1a1a
-$borderColor = #dcdcdc
+$borderColor = alpha(#000, 8.3%)
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
 $badgeTipColor = #42b983
 $badgeWarningColor = darken(#ffe564, 35%)
-$badgeErrorColor = #DA5961
+$badgeErrorColor = #da5961
 
 $navbarHeight = 3.75rem
 $sidebarWidth = 18rem
