feat: small adjust for external anchors

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -6,6 +6,12 @@ body
   font-weight: 400
   line-height: 1rem
 
+a span
+  display: inline-block
+  margin-left: 0.125em
+  width: 15px
+  height: 15px
+
 .navbar, .sidebar
   backdrop-filter: blur(8px)
   background-color: rgba(252, 252, 252, 0.85) !important
