feat: create typography

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -1,5 +1,5 @@
 body
-  font-family: "Open Sans", "Segoe UI", Tahoma, Sans-serif
+  font-family: "Open Sans", "Segoe UI", Verdana, Sans-serif
   font-size: 1rem
   font-style: normal
   font-variant: normal
