--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -6,11 +6,16 @@ body
   font-weight: 400
   line-height: 1rem
 
-a span
-  display: inline-block
-  margin-left: 0.125em
-  width: 15px
-  height: 15px
+a
+  &:hover
+    color: #76110F
+  &:active
+    color: #930a09
+  span
+    display: inline-block
+    margin-left: 0.125em
+    width: 15px
+    height: 15px
 
 .navbar, .sidebar
   backdrop-filter: blur(8px)
