--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -59,3 +59,38 @@ a
   width: 12px
   height: 12px
   margin-right: 4px
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: black white;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  margin-left: -8px;
+}
+
+::-webkit-scrollbar-thumb {
+  height: 180px;
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.25);
+  background-clip: padding-box;
+  transition: background-color 0.35s ease;
+}
+
+:hover::-webkit-scrollbar-thumb,
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 1);
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
