feat: add Codepen block base styles

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -60,6 +60,15 @@ a
   height: 12px
   margin-right: 4px
 
+.codepen
+  box-sizing: border-box
+  display: flex
+  align-items: center
+  justify-content: center
+  border: 2px solid
+  margin: 1em 0
+  padding: 1em
+
 * {
   scrollbar-width: thin;
   scrollbar-color: black white;
