feat: disable WIP components

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -32,6 +32,11 @@ a
   .links
     background: none !important
 
+.sidebar-group.is-sub-group
+  & > .sidebar-heading:not(.clickable)
+    .arrow
+      display: none
+
 .home
   .features
     text-align: center
