--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -14,8 +14,8 @@ a
   span
     display: inline-block
     margin-left: 0.125em
-    width: 15px
-    height: 15px
+    width: 11px
+    height: 11px
 
 .navbar, .sidebar
   backdrop-filter: blur(8px)
@@ -43,6 +43,62 @@ a
 
   .hero img
     max-width: 260px !important
+
+  .hero .action .action-button
+    padding: 0.375rem 1.125rem
+    font-size: 1rem
+    transition: all 250ms ease
+    border-radius: 4px
+    background: #005c6e
+    border: none
+    outline: 1px solid #0000
+    outline-offset: 1px
+    position: relative
+
+    &::after
+      position: absolute
+      content: ''
+      top: 0; left: 0; bottom: 0; right: 0
+      width: 100%; height: 100%
+      pointer-events: none
+      border-radius: 4px
+      background: linear-gradient(transparentify(#fff, 8%) 92%, transparentify(#000, 40%))
+      clip-path: polygon(0% 0%, 0% 100%, 1px 100%, 1px 1px, calc(100% - 1px) 1px, calc(100% - 1px) calc(100% - 1px), 1px calc(100% - 1px), 1px 100%, 100% 100%, 100% 0%)
+
+    &::before
+      display: inline-block
+      content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M6.23541 2.1919C5.2355 1.62944 4 2.352 4 3.49925V12.4995C4 13.6468 5.23546 14.3693 6.23537 13.8069L14.2356 9.30692C15.2551 8.73348 15.2551 7.26566 14.2357 6.69219L6.23541 2.1919Z' fill='%23fff'/%3E%3C/svg%3E")
+      width: 1rem
+      height: 1rem
+      padding-right: 0.75rem
+      position: relative
+      top: 2px
+
+    &:hover
+      background: #09323ce6
+
+    &:active
+      background: #09323ccc
+
+      &::after
+        background: transparentify(#fff, 8%)
+
+    &:focus-visible
+      outline-color: #000
+
+  /*
+  .hero .action .action-button
+    padding: 0.375rem 1.5rem
+    font-size: 1rem
+    transition: all 250ms ease
+    border-radius: 4px
+    border: 1px solid transparent
+    background: linear-gradient(#005c6e 50%, red 50%) padding-box, linear-gradient(tint(#005c6e, 8%), shade(#005c6e, 40%)) border-box
+    background-size: 100% 200%, 100% 100%
+    background-position: 0 0, 0 0
+
+
+  */
 
 .page
   .custom-block
