fix: wrong max-width value

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -89,7 +89,7 @@ a
       border-radius: 8px
       filter: drop-shadow(0 2px 4px #0000001a)
       padding: 1.25rem 1.75rem
-      max-width: auto
+      max-width: none
  
   .hero img
     max-width: 260px !important
