feat: upgrade typography to Roboto Flex

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -2,7 +2,7 @@ html, body, #app, .theme-container
   height: 100%
 
 body
-  font-family: "Open Sans", "Segoe UI", Verdana, Sans-serif
+  font-family: "Roboto Flex", "Segoe UI", Verdana, Sans-serif
   font-size: 1rem
   font-style: normal
   font-variant: normal
