feat: migrate hyperlinks to accent color

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -12,10 +12,11 @@ body
   background-attachment: fixed
 
 a
+  color: #0485a9
   &:hover
-    color: #76110f
+    color: #085b6e
   &:active
-    color: #930a09
+    color: #094757
   span
     display: inline-block
     margin-left: 0.125em
